# cascadence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test  test.cpp
src/: Cascadence.cpp  Cascadence.hpp  Cascadence.ttl  MidiController.cpp  MidiController.hpp  ParameterController.cpp  ParameterController.hpp  ParameterObserver.hpp  Sequence.cpp  Sequence.hpp  SequencePattern.cpp  SequencePattern.hpp  State.hpp  config.hpp  main.cpp  manifest.ttl  midiNoteEvent.hpp  note.cpp  note.hpp  portInfo.hpp  scale.cpp  scale.hpp  scaleType.cpp  scaleType.hpp  urids.hpp
src/ui/: CascadenceUI.cpp  CascadenceUI.hpp  SequenceFrame.cpp  SequenceFrame.hpp  SequenceNote.cpp  SequenceNote.hpp  main.cpp  uiConfig.hpp
